// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article SEO renders correctly 1`] = `
<div>
  <title>
    Next SEO | Article Page Title
  </title>
  <meta
    content="index,follow"
    name="robots"
  />
  <meta
    content="Description of article page"
    name="description"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@site"
    name="twitter:site"
  />
  <meta
    content="@handle"
    name="twitter:creator"
  />
  <meta
    content="Open Graph Article Title"
    property="og:title"
  />
  <meta
    content="Description of open graph article"
    property="og:description"
  />
  <meta
    content="https://www.example.com/articles/article-title"
    property="og:url"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="2017-06-21T23:04:13Z"
    property="article:published_time"
  />
  <meta
    content="2018-01-21T18:04:43Z"
    property="article:modified_time"
  />
  <meta
    content="2022-12-21T22:04:11Z"
    property="article:expiration_time"
  />
  <meta
    content="https://www.example.com/authors/@firstnameA-lastnameA"
    property="article:author"
  />
  <meta
    content="https://www.example.com/authors/@firstnameB-lastnameB"
    property="article:author"
  />
  <meta
    content="Section II"
    property="article:section"
  />
  <meta
    content="Tag A"
    property="article:tag"
  />
  <meta
    content="Tag B"
    property="article:tag"
  />
  <meta
    content="https://www.test.ie/og-image-article-title-01.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Article Title A"
    property="og:image:alt"
  />
  <meta
    content="850"
    property="og:image:width"
  />
  <meta
    content="650"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/og-image-article-title-02.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Article Title B"
    property="og:image:alt"
  />
  <meta
    content="950"
    property="og:image:width"
  />
  <meta
    content="850"
    property="og:image:height"
  />
  <meta
    content="SiteName"
    property="og:site_name"
  />
</div>
`;

exports[`Book SEO renders correctly 1`] = `
<div>
  <title>
    Next SEO | Book Page Title
  </title>
  <meta
    content="index,follow"
    name="robots"
  />
  <meta
    content="Description of book page"
    name="description"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@site"
    name="twitter:site"
  />
  <meta
    content="@handle"
    name="twitter:creator"
  />
  <meta
    content="Open Graph Book Title"
    property="og:title"
  />
  <meta
    content="Description of open graph book"
    property="og:description"
  />
  <meta
    content="https://www.example.com/books/book-title"
    property="og:url"
  />
  <meta
    content="book"
    property="og:type"
  />
  <meta
    content="https://www.example.com/authors/@firstnameA-lastnameA"
    property="book:author"
  />
  <meta
    content="https://www.example.com/authors/@firstnameB-lastnameB"
    property="book:author"
  />
  <meta
    content="978-3-16-148410-0"
    property="book:isbn"
  />
  <meta
    content="2018-09-17T11:08:13Z"
    property="book:release_date"
  />
  <meta
    content="Tag A"
    property="book:tag"
  />
  <meta
    content="Tag B"
    property="book:tag"
  />
  <meta
    content="https://www.test.ie/og-image-book-title-01.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Book Title A"
    property="og:image:alt"
  />
  <meta
    content="850"
    property="og:image:width"
  />
  <meta
    content="650"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/og-image-book-title-02.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Book Title B"
    property="og:image:alt"
  />
  <meta
    content="950"
    property="og:image:width"
  />
  <meta
    content="850"
    property="og:image:height"
  />
  <meta
    content="SiteName"
    property="og:site_name"
  />
</div>
`;

exports[`Profile SEO renders correctly 1`] = `
<div>
  <title>
    Next SEO | Profile Page Title
  </title>
  <meta
    content="index,follow"
    name="robots"
  />
  <meta
    content="Description of profile page"
    name="description"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@site"
    name="twitter:site"
  />
  <meta
    content="@handle"
    name="twitter:creator"
  />
  <meta
    content="Open Graph Profile Title"
    property="og:title"
  />
  <meta
    content="Description of open graph profile"
    property="og:description"
  />
  <meta
    content="https://www.example.com/@firstlast123"
    property="og:url"
  />
  <meta
    content="profile"
    property="og:type"
  />
  <meta
    content="First"
    property="profile:first_name"
  />
  <meta
    content="Last"
    property="profile:last_name"
  />
  <meta
    content="firstlast123"
    property="profile:username"
  />
  <meta
    content="male"
    property="profile:gender"
  />
  <meta
    content="https://www.test.ie/og-image-firstlast123-01.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt firstlast123 A"
    property="og:image:alt"
  />
  <meta
    content="850"
    property="og:image:width"
  />
  <meta
    content="650"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/og-image-firstlast123-02.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt firstlast123 B"
    property="og:image:alt"
  />
  <meta
    content="950"
    property="og:image:width"
  />
  <meta
    content="850"
    property="og:image:height"
  />
  <meta
    content="SiteName"
    property="og:site_name"
  />
</div>
`;

exports[`Video SEO renders correctly 1`] = `
<div>
  <title>
    Next SEO | Video Page Title
  </title>
  <meta
    content="index,follow"
    name="robots"
  />
  <meta
    content="Description of video page"
    name="description"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@site"
    name="twitter:site"
  />
  <meta
    content="@handle"
    name="twitter:creator"
  />
  <meta
    content="Open Graph Video Title"
    property="og:title"
  />
  <meta
    content="Description of open graph video"
    property="og:description"
  />
  <meta
    content="https://www.example.com/videos/video-title"
    property="og:url"
  />
  <meta
    content="video.movie"
    property="og:type"
  />
  <meta
    content="https://www.example.com/actors/@firstnameA-lastnameA"
    property="video:actor"
  />
  <meta
    content="Protagonist"
    property="video:actor:role"
  />
  <meta
    content="https://www.example.com/actors/@firstnameB-lastnameB"
    property="video:actor"
  />
  <meta
    content="Antagonist"
    property="video:actor:role"
  />
  <meta
    content="https://www.example.com/directors/@firstnameA-lastnameA"
    property="video:director"
  />
  <meta
    content="https://www.example.com/directors/@firstnameB-lastnameB"
    property="video:director"
  />
  <meta
    content="https://www.example.com/writers/@firstnameA-lastnameA"
    property="video:writer"
  />
  <meta
    content="https://www.example.com/writers/@firstnameB-lastnameB"
    property="video:writer"
  />
  <meta
    content="680000"
    property="video:duration"
  />
  <meta
    content="2022-12-21T22:04:11Z"
    property="video:release_date"
  />
  <meta
    content="Tag A"
    property="video:tag"
  />
  <meta
    content="Tag B"
    property="video:tag"
  />
  <meta
    content="https://www.test.ie/og-image-video-title-01.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Video Title A"
    property="og:image:alt"
  />
  <meta
    content="850"
    property="og:image:width"
  />
  <meta
    content="650"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/og-image-video-title-02.jpg"
    property="og:image"
  />
  <meta
    content="Og Image Alt Video Title B"
    property="og:image:alt"
  />
  <meta
    content="950"
    property="og:image:width"
  />
  <meta
    content="850"
    property="og:image:height"
  />
  <meta
    content="SiteName"
    property="og:site_name"
  />
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <title>
    This is a test title.
  </title>
  <meta
    content="index,follow"
    name="robots"
  />
  <meta
    content="This is a test description."
    name="description"
  />
  <meta
    content="#73fa97"
    name="theme-color"
  />
  <link
    href="https://m.canonical.ie"
    media="only screen and (max-width: 640px)"
    rel="alternate"
  />
  <link
    href="https://www.canonical.ie/de"
    hreflang="de-AT"
    rel="alternate"
  />
  <link
    href="https://www.canonical.ie/sk"
    hreflang="sk-SK"
    rel="alternate"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@site"
    name="twitter:site"
  />
  <meta
    content="@handle"
    name="twitter:creator"
  />
  <meta
    content="1234567890"
    property="fb:app_id"
  />
  <meta
    content="Open graph title"
    property="og:title"
  />
  <meta
    content="This is testing og:description."
    property="og:description"
  />
  <meta
    content="https://www.url.ie"
    property="og:url"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="https://www.test.ie/image-01.jpg"
    property="og:image"
  />
  <meta
    content="Alt text right here"
    property="og:image:alt"
  />
  <meta
    content="https://www.test.ie/secure-image-01.jpg"
    property="og:image:secure_url"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="800"
    property="og:image:width"
  />
  <meta
    content="600"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/image-02.jpg"
    property="og:image"
  />
  <meta
    content="1200"
    property="og:image:width"
  />
  <meta
    content="1200"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/image-03.jpg"
    property="og:image"
  />
  <meta
    content="1200"
    property="og:image:width"
  />
  <meta
    content="1200"
    property="og:image:height"
  />
  <meta
    content="https://www.test.ie/image-04.jpg"
    property="og:image"
  />
  <meta
    content="1200"
    property="og:image:width"
  />
  <meta
    content="1200"
    property="og:image:height"
  />
  <meta
    content="http://examples.opengraphprotocol.us/media/audio/1khz.mp3"
    property="og:audio"
  />
  <meta
    content="https://d72cgtgi6hvvl.cloudfront.net/media/audio/1khz.mp3"
    property="og:audio:secure_url"
  />
  <meta
    content="audio/mpeg"
    property="og:audio:type"
  />
  <meta
    content="http://examples.opengraphprotocol.us/media/audio/250hz.mp3"
    property="og:audio"
  />
  <meta
    content="https://d72cgtgi6hvvl.cloudfront.net/media/audio/250hz.mp3"
    property="og:audio:secure_url"
  />
  <meta
    content="audio/mpeg"
    property="og:audio:type"
  />
  <meta
    content="en_IE"
    property="og:locale"
  />
  <meta
    content="SiteName"
    property="og:site_name"
  />
  <link
    href="https://www.canonical.ie"
    rel="canonical"
  />
  <link
    href="https://www.test.ie/favicon.ico"
    rel="icon"
  />
  <link
    href="https://www.test.ie/touch-icon-ipad.jpg"
    rel="apple-touch-icon"
    sizes="76x76"
  />
  <link
    href="https://www.test.ie/touch-icon-iphone-retina.jpg"
    rel="apple-touch-icon"
    sizes="120x120"
  />
  <link
    color="#193860"
    href="https://www.test.ie/safari-pinned-tab.svg"
    rel="mask-icon"
  />
  <link
    href="/manifest.json"
    rel="manifest"
  />
  <link
    as="font"
    crossorigin="anonymous"
    href="https://www.test.ie/font/sample-font.woof2"
    rel="preload"
    type="font/woff2"
  />
</div>
`;
